Some cleanups fixes and minor updates.
